# flurlicht

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flurlicht.cpp  flurlicht.h  flurlicht.service  leds.cpp  leds.h  main.cpp
.github/workflows/: cmake.yml
arduino/AnalogInSerial/: AnalogInSerial.ino
include/: animations.h  animations_allfade.h  animations_base.h  animations_blink.h  animations_random.h  animations_random_granular.h  animations_scanner.h  flurlicht.h  flurlicht_arduino.h  flurlicht_events.h  flurlicht_gpio.h  flurlicht_mqtt.h  flurlicht_occupancy.h  flurlicht_tools.h  leds.h
src/: animations.cpp  animations_allfade.cpp  animations_base.cpp  animations_blink.cpp  animations_random.cpp  animations_random_granular.cpp  animations_scanner.cpp  flurlicht.cpp  flurlicht.cpp.save  flurlicht_arduino.cpp  flurlicht_events.cpp  flurlicht_gpio.cpp  flurlicht_mqtt.cpp  flurlicht_occupancy.cpp  flurlicht_tools.cpp  leds.cpp  main.cpp
tests/: flurlicht_tools_test.cpp  leds_test.cpp
